--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
  			<version>3.11.1</version>
  			 <scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>me.paulschwarz</groupId>
+    		<artifactId>spring-dotenv</artifactId>
+    		<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
