--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
 
+app.jwt-secret=PeSgVkYp3s6v9yTBfERHjMcQfTjWmZq4he8Akm3999ok
+app.jwt-expiration-ms = 60000
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-message=always
