A bunch of fixes and changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@ spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
 
 app.jwt-secret=PeSgVkYp3s6v9yTBfERHjMcQfTjWmZq4he8Akm3999ok
-app.jwt-expiration-ms = 60000
+app.jwt-expiration-ms = 43200000
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-message=always
+logging.level.org.springframework.security=TRACE
