Created Custom error page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ app.jwt-expiration-ms = 43200000
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-server.error.include-message=always
+server.error.whitelabel.enabled=false
+server.error.path=/error
 logging.level.org.springframework.security=TRACE
